Move tracking logic out of FlosMum
- Move tracking logic out of FlosMum
- Insert Tracker into FlosMum :)