@@ -3,11 +3,13 @@ package de.fhdw.robocode;
 import robocode.ScannedRobotEvent;
 
 import java.util.*;
+import java.util.function.Consumer;
+import java.util.function.Function;
 import java.util.stream.Collectors;
 
 public class Tracker {
     private final Map<String, List<Tuple<Date, ScannedRobotEvent>>> trackedEnemies;
-    private Map<String, Date> lastShot;
+    private final Map<String, Date> lastShot;
 
     public Tracker() {
         trackedEnemies = Collections.synchronizedMap(new HashMap<>());
@@ -25,11 +27,31 @@ public class Tracker {
             states = trackedEnemies.get(name);
         }
 
-        states.add(new Tuple<Date, ScannedRobotEvent>(Calendar.getInstance().getTime(), scannedRobotEvent));
+        states.add(new Tuple<>(Calendar.getInstance().getTime(), scannedRobotEvent));
     }
 
     public void trackShot(String name) {
         lastShot.put(name, Calendar.getInstance().getTime());
+    }
+
+    public void checkShots(Consumer<Tuple<Date, ScannedRobotEvent>> callback) {
+        for(String name : getNames()) {
+            List<Tuple<Date, ScannedRobotEvent>> states = getTrackMap().get(name);
+            List<Tuple<Date, ScannedRobotEvent>> relevantStates = states.stream()
+                    .filter(tuple -> tuple.getFirst().getTime() > getLastShot(name).getTime())
+                    .sorted((tuple1, tuple2) -> Long.compare(tuple2.getFirst().getTime(), tuple1.getFirst().getTime()))
+                    .collect(Collectors.toList());
+
+            List<Double> energyLevels = relevantStates.stream()
+                    .map(tuple -> tuple.getSecond().getEnergy())
+                    .distinct()
+                    .collect(Collectors.toList());
+
+            if(energyLevels.size() >= 2) {
+                trackShot(name);
+                callback.accept(relevantStates.get(0));
+            }
+        }
     }
 
     public Map<String, List<Tuple<Date, ScannedRobotEvent>>> getTrackMap() {
@@ -53,15 +75,10 @@ public class Tracker {
             return null;
         }
 
-        return getData(name).stream().sorted((tuple1, tuple2) -> {
-            if(tuple1.getFirst().getTime() < tuple2.getFirst().getTime()) {
-                return 1;
-            } else if(tuple1.getFirst().getTime() > tuple2.getFirst().getTime()) {
-                return -1;
-            } else {
-                return 0;
-            }
-        }).collect(Collectors.toList()).get(0);
+        return getData(name).stream()
+                .sorted((tuple1, tuple2) -> Long.compare(tuple2.getFirst().getTime(), tuple1.getFirst().getTime()))
+                .collect(Collectors.toList())
+                .get(0);
     }
 
     public Date getLastShot(String name) {
